# IMAP-TLS-client

./: CMakeLists.txt  LICENSE  Makefile  README.md
include/: ArgParser.h  ConnectionStrategy.h  FetchByIdCommand.h  FetchCommand.h  IMAPClient.h  IMAPCommand.h  IMAPCommandFactory.h  IMAPExceptions.h  IMAPResponceType.h  LoginCommand.h  LogoutCommand.h  SSLConnectionStrategy.h  SSLWrapper.h  SearchCommand.h  SelectCommand.h  TCPConnectionStrategy.h
src/: ArgParser.cpp  IMAPClient.cpp  SSLWrapper.cpp  main.cpp
